# kohksh137777

./: CMakeLists.txt  Main.cpp  alternative-solutions.sh  android-build.sh  android-test-app.sh  build-android-apk.sh  build-light-apk.sh  build-minimal.sh  build-real-apk.sh  build-simple.sh  build-valid-apk.sh  build-working-apk.sh  build.sh  create-apk.sh  create-simple-apk.sh  create-single-apk.sh  debug-build.sh  ensure-apk-creation.sh  extract-instructions.sh  install-android-direct.sh  install-android.sh  install-dependencies.sh  install-guide.md  setup-sdl.sh  sign-apk.sh  test-compile.sh  test-installation.sh
.github/workflows/: android-build.yml  android-sdl-fixed.yml  android-sdl-from-repo.yml  android-sdl.yml  android-ultimate-build.yml  android.yml  build-android-apk.yml  build.yml
Engine/Audio/: AudioManager.cpp  AudioManager.h
Engine/Core/: GameEngine.cpp  GameEngine.h
Engine/Graphics/: RenderSystem.cpp  RenderSystem.h
Engine/Input/: InputHandler.cpp  InputHandler.h
Engine/Physics/: PhysicsEngine.cpp  PhysicsEngine.h
Game/Entities/: Coin.cpp  Coin.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h
Game/Managers/: GameManager.cpp  GameManager.h
Game/UI/: UIManager.cpp  UIManager.h
android/: Android.mk  Application.mk  CMakeLists.txt  SDL_android.c  build.gradle  main.cpp  ndk-build.sh
android/include/: SDL_config_android.h
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/kohksh/: MainActivity.java
